--- a/release38/LSP-info-for-release.json
+++ b/release38/LSP-info-for-release.json
@@ -18,6 +18,12 @@
 		"pr": "https://github.com/sublimelsp/LSP-bash/pull/73"
 	},
 	{
+		"name": "https://github.com/sublimelsp/LSP-basedpyright",
+		"current_tag": "1.0.0",
+		"proposed_tag": "2.0.0",
+		"pr": "https://github.com/sublimelsp/LSP-basedpyright/pull/1"
+	},
+	{
 		"name": "LSP-Bicep",
 		"current_tag": "v1.0.1",
 		"proposed_tag": "v2.0.0",
