--- a/release38/LSP-info-for-release.json
+++ b/release38/LSP-info-for-release.json
@@ -18,7 +18,7 @@
 		"pr": "https://github.com/sublimelsp/LSP-bash/pull/73"
 	},
 	{
-		"name": "https://github.com/sublimelsp/LSP-basedpyright",
+		"name": "LSP-basedpyright",
 		"current_tag": "1.0.0",
 		"proposed_tag": "2.0.0",
 		"pr": "https://github.com/sublimelsp/LSP-basedpyright/pull/1"
